WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101885
DFG should not emit function checks if we've already proved that the operand is that exact function
https://bugs.webkit.org/show_bug.cgi?id=101885
Summary
DFG should not emit function checks if we've already proved that the operand ...
Filip Pizlo
Reported
2012-11-11 19:35:27 PST
Patch forthcoming.
Attachments
the patch
(3.42 KB, patch)
2012-11-11 19:38 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-11-11 19:38:29 PST
Created
attachment 173541
[details]
the patch
Filip Pizlo
Comment 2
2012-11-12 14:53:08 PST
Landed in
http://trac.webkit.org/changeset/134313
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug