Source/JavaScriptCore/dfg/DFGAbstractValue.h
@@ -284,6 +284,21 @@ struct AbstractValue {
         checkConsistency();
     }
     
+    bool filterByValue(JSValue value)
+    {
+        if (!validate(value))
+            return false;
+        
+        if (!!value && value.isCell())
+            filter(StructureSet(value.asCell()->structure()));
+        else
+            filter(speculationFromValue(value));
+        
+        m_value = value;
+        
+        return true;
+    }
+    
     bool validateType(JSValue value) const
     {
         if (isTop())
